--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "~0.2.8",
     "body-parser": "^1.15.2",
     "express": "~3.2.4",
+    "request": "^2.74.0",
     "socket.io": "~0.9.14"
   }
 }
