--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.15.2",
-    "express": "~3.2.4",
+    "express": "^3.21.2",
     "request": "^2.74.0",
     "socket.io": "~0.9.14"
   }
