--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.15.2",
+    "config": "^1.21.0",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
+    "https": "^1.0.0",
     "request": "^2.74.0",
     "socket.io": "~0.9.14"
   }
