--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.15.2",
     "config": "^1.21.0",
     "crypto": "0.0.3",
+    "ejs": "^2.5.1",
     "express": "^4.14.0",
     "https": "^1.0.0",
     "request": "^2.74.0",
