--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "~0.2.8",
     "body-parser": "^1.15.2",
     "config": "^1.21.0",
+    "cron": "^1.1.1",
     "crypto": "0.0.3",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
