--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "https": "^1.0.0",
+    "node-schedule": "^1.1.1",
     "request": "^2.74.0",
     "socket.io": "~0.9.14"
   },
