--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "https": "^1.0.0",
     "node-schedule": "^1.1.1",
+    "node-timezone": "0.0.3",
     "request": "^2.74.0",
     "socket.io": "~0.9.14"
   },
